--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Linktree</title>
+  <title>Von Lion</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="author" content="">
@@ -33,12 +33,12 @@
 <div class="flex pt-12 justify-center">
   <div class="relative w-24">
     <img class="rounded-full border border-gray-200 shadow-sm" src="https://api.focusnote.de/v1/storage/files/60a2f9fc55ef2/view?project=60a2e9b51762f&mode=admin" alt="user image" />
-    <p class="mt-4 text-center font-semibold text-xl">Name</p>
+    <p class="mt-4 text-center font-semibold text-xl">Von Lion</p>
   </div>
 </div>
 
 <div class="flex pb-12 justify-center">
-  <span class="mt-2 bg-blue-500 text-white px-3 rounded-lg font-medium text-sm">Placeholder</span>
+  <span class="mt-2 bg-blue-500 text-white px-3 rounded-lg font-medium text-sm">🌍 Full Time Muisc Producer At Beatstars Publishing & Sony Music/ATV Publishing 🌍</span>
 </div>
 
 <!-- DIVIDER -->
