--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div class="grid max-w-screen-lg sm:mx-auto">
 <div class="flex flex-row mb-4 items-center justify-center">
      <hr class="w-full border-gray-300">
-        <label class="mx-2 text-sm text-center text-gray-600 font-medium uppercase">LoremIpsum</label>
+        <label class="mx-2 text-sm text-center text-gray-600 font-medium uppercase">Links</label>
      <hr class="w-full border-gray-300">
 </div>
 </div>
@@ -63,8 +63,8 @@
       <div class="absolute bottom-0 right-0 w-1 h-full duration-300 origin-top transform scale-y-0 bg-gray-800 group-hover:scale-y-100"></div>
       <div class="relative flex items-center justify-between p-5 bg-white rounded-sm">
         <div class="pr-4">
-            <h6 class="mb-2 font-semibold leading-5">Lorem Ipsum</h6>
-            <p class="text-sm text-gray-900">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</p>
+            <h6 class="mb-2 font-semibold leading-5">BEATSTORE</h6>
+            <p class="text-sm text-gray-900">Buy 2, Get 1 Free</p>
         </div>
         <div class="flex items-center justify-center">
           <svg class="w-3 text-gray-700 transition-colors duration-200 group-hover:text-deep-purple-accent-400" fill="currentColor" viewBox="0 0 12 12">
@@ -87,8 +87,8 @@
       <div class="absolute bottom-0 right-0 w-1 h-full duration-300 origin-top transform scale-y-0 bg-gray-800 group-hover:scale-y-100"></div>
       <div class="relative flex items-center justify-between p-5 bg-white rounded-sm">
         <div class="pr-4">
-            <h6 class="mb-2 font-semibold leading-5">Lorem Ipsum</h6>
-            <p class="text-sm text-gray-900">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</p>
+            <h6 class="mb-2 font-semibold leading-5">SPOTIFY</h6>
+            <p class="text-sm text-gray-900">All the songs I've been a part off</p>
         </div>
         <div class="flex items-center justify-center">
           <svg class="w-3 text-gray-700 transition-colors duration-200 group-hover:text-deep-purple-accent-400" fill="currentColor" viewBox="0 0 12 12">
@@ -106,7 +106,7 @@
 <div class="grid max-w-screen-lg sm:mx-auto">
 <div class="flex flex-row mb-4 items-center justify-center">
      <hr class="w-full border-gray-300">
-        <label class="mx-2 text-sm text-center text-gray-600 font-medium uppercase">LoremIpsum</label>
+        <label class="mx-2 text-sm text-center text-gray-600 font-medium uppercase">Join our Discord!</label>
      <hr class="w-full border-gray-300">
 </div>
 </div>
@@ -123,8 +123,8 @@
       <div class="absolute bottom-0 right-0 w-1 h-full duration-300 origin-top transform scale-y-0 bg-gray-800 group-hover:scale-y-100"></div>
       <div class="relative flex items-center justify-between p-5 bg-white rounded-sm">
         <div class="pr-4">
-            <h6 class="mb-2 font-semibold leading-5">Lorem Ipsum</h6>
-            <p class="text-sm text-gray-900">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</p>
+            <h6 class="mb-2 font-semibold leading-5">KATANA DISCORD</h6>
+            <p class="text-sm text-gray-900">Discord community for producers, artists and creatives</p>
         </div>
         <div class="flex items-center justify-center">
           <svg class="w-3 text-gray-700 transition-colors duration-200 group-hover:text-deep-purple-accent-400" fill="currentColor" viewBox="0 0 12 12">
