--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="relative flex items-center justify-between p-5 bg-white rounded-sm">
         <div class="pr-4">
             <h6 class="mb-2 font-semibold leading-5">BEATSTORE</h6>
-            <p class="text-sm text-gray-900">Buy 2, Get 1 Free</p>
+            <p class="text-sm text-gray-900">Buy 2, Get 1 Free.</p>
         </div>
         <div class="flex items-center justify-center">
           <svg class="w-3 text-gray-700 transition-colors duration-200 group-hover:text-deep-purple-accent-400" fill="currentColor" viewBox="0 0 12 12">
@@ -88,7 +88,7 @@
       <div class="relative flex items-center justify-between p-5 bg-white rounded-sm">
         <div class="pr-4">
             <h6 class="mb-2 font-semibold leading-5">SPOTIFY</h6>
-            <p class="text-sm text-gray-900">All the songs I've been a part off</p>
+            <p class="text-sm text-gray-900">All the songs I've been a part off.</p>
         </div>
         <div class="flex items-center justify-center">
           <svg class="w-3 text-gray-700 transition-colors duration-200 group-hover:text-deep-purple-accent-400" fill="currentColor" viewBox="0 0 12 12">
@@ -124,7 +124,7 @@
       <div class="relative flex items-center justify-between p-5 bg-white rounded-sm">
         <div class="pr-4">
             <h6 class="mb-2 font-semibold leading-5">KATANA DISCORD</h6>
-            <p class="text-sm text-gray-900">Discord community for producers, artists and creatives</p>
+            <p class="text-sm text-gray-900">Discord community for producers, artists and creatives.</p>
         </div>
         <div class="flex items-center justify-center">
           <svg class="w-3 text-gray-700 transition-colors duration-200 group-hover:text-deep-purple-accent-400" fill="currentColor" viewBox="0 0 12 12">
