--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 
 <div class="flex pb-12 justify-center">
-  <span class="mt-2 bg-blue-500 text-white px-3 rounded-lg font-medium text-sm">🌍 Full Time Muisc Producer At Beatstars Publishing & Sony Music/ATV Publishing 🌍</span>
+  <span class="mt-2 bg-blue-500 text-white px-3 rounded-lg font-medium text-sm">🌍 Full Time Music Producer At Beatstars Publishing & Sony Music/ATV Publishing 🌍</span>
 </div>
 
 <!-- DIVIDER -->
